--- a/classC/classC.html
+++ b/classC/classC.html
@@ -14,7 +14,7 @@
     <img src = "../class.png" alt = "classes"/>
 
     <div>
-    <button onclick="showIP()"  class = "Generate_IP"> Generate an IP address that would be assigned to a host device</button>
+    <button onclick="showIP()"  class = "Generate_IP"> Generate an IP address for a computer (i.e.,host device)</button>
     <p id = "generateIP"></p>
     </div>
 
@@ -42,7 +42,7 @@
             <div id = "feedback_mssg1"></div>
             <div class = "answer-button" id = "answer-button-2"> Hints </div>
             <div id = "answer-2">
-                Each subnet mask is a sequence of contiguous number of 1 bits followed by contiguous number of 0 bits in a 32-bit binary representation.<br>
+                Each subnet mask is a sequence of contiguous number of 1 bits followed by some number of 0 bits in a 32-bit binary representation.<br>
                 The CIDR notation is expressed as "/X," where X is the number of bits set to 1 in the subnet mask.<br>
                 For example:<br>
                 CIDR Notation: /27<br>
@@ -53,7 +53,7 @@
         </div>
 
         <div id = "id_1_b">
-            <label for = "binary_id"> What is the binary form of the IP address assigned to the computer ?</label>
+            <label for = "binary_id"> What is the binary form of the IP address assigned to the computer?</label>
             <input type="text" id = "binary_id" name = "binary_id" onchange="next1_b()"/><br>
             <div id = "feedback_mssg1_b"></div><br><br>
             <a class = "answer-button" href = "https://whatismyipaddress.com/ip-address-to-binary" target = "_blank" id = "convert-button"> How to Convert ?</a>
@@ -66,13 +66,13 @@
             <div id = "feedback_mssg2"></div>
             <div class = "answer-button" id = "answer-button-3"> Hints </div>
             <div id = "answer-3">
-                First, convert both the IP address and subnet mask IP address to the binary form <br>
-                Second, perform bitwise AND operation between binary representation of the IP address and the binary representation of the subnet mask IP address.<br>
+                First, convert both the computer's IP address and subnet mask IP address to the binary forms. <br>
+                Second, perform bitwise AND operation between binary representation of the computer's IP address and the binary representation of the subnet mask IP address.<br>
                 Third, convert the result of the AND operation back to decimal to obtain the network IP address in a dotted-qad form.<br>
                 For example: <br>
-                IP address: 192.168.1.35 <br>
+                Computer's IP address: 192.168.1.35 <br>
                 Subnet Mask IP address: 255.255.255.192<br>
-                IP Address(192.168.1.35) in binary: 11000000.10101000.00000001.00100011<br>
+                Computer's IP Address(192.168.1.35) in binary: 11000000.10101000.00000001.00100011<br>
                 Subnet Mask IP Address(255.255.255.192) in binary: 11111111.11111111.11111111.11000000<br>
                 Result of AND operation: 11000000.10101000.00000001.00000000 <br>
                 Network IP Address: 192.168.1.0
@@ -85,14 +85,14 @@
             <div id = "feedback_mssg3"></div>
             <div class = "answer-button" id = "answer-button-4"> Hints</div>
             <div id = "answer-4">
-                Convert the both IP address and subnet mask to the binary form <br>
+                Convert the both computer's IP address and subnet mask IP address to their binary forms. <br>
                 Invert all the bits of the subnet mask<br> 
-                Perform bitwise OR operation between binary representation of the IP address and the binary representation of the inverted subnet mask IP address.<br>
+                Perform bitwise OR operation between binary representation of the computer's IP address and the binary representation of the inverted subnet mask IP address.<br>
                 Convert the result of the OR operation back to decimal to obtain the broadcast IP address.<br>
                 For example: <br>
                 IP address: 192.168.1.48 <br>
                 Subnet Mask IP address: 255.255.255.192<br>
-               1. IP Address (192.168.1.35) in binary: 11000000.10101000.00000001.00100011<br>
+               1. Computer's IP Address (192.168.1.35) in binary: 11000000.10101000.00000001.00100011<br>
                2. Subnet Mask IP address: 11111111.11111111.11111111.11000000 <br>
                3. Inverted Subnet Mask IP address in binary:00000000.00000000.00000000.00111111<br>
                4. Result of OR operation between 1 and 3 : 11000000.10101000.00000001.00111111 <br>
@@ -101,7 +101,7 @@
         </div>
 
         <div id = "id_4">
-            <label for = "first_id"> What is the first assignable IP address for the broadcast domain in which the computer resides ? </label>
+            <label for = "first_id"> What is the first assignable IP address for the broadcast domain in which the computer resides? </label>
             <input type="text" id = "first_id" name = "first_id" onchange="next4()"/>
             <div id = "feedback_mssg4"></div>
             <div class = "answer-button" id = "answer-button-5"> Hints  </div>
@@ -115,7 +115,7 @@
         </div>
 
         <div id = "id_5">
-            <label for = "last_id"> What is the last assignable IP address for the broadcast domain in which the computer resides ?</label>
+            <label for = "last_id"> What is the last assignable IP address for the broadcast domain in which the computer resides?</label>
             <input type="text" id = "last_id" name = "last_id" onchange="next5()"/>
             <div id = "feedback_mssg5"></div>
             <div class = "answer-button" id = "answer-button-6"> Hints </div>
@@ -128,16 +128,17 @@
         </div>
 
         <div id = "id_6">
-            <label for = "usable_host"> How many total assignable IP addresses exist for the broadcast domain in which the computer resides ?</label>
+            <label for = "usable_host"> How many total assignable IP addresses exist for the broadcast domain in which the computer resides?</label>
             <input type="text" id = "usable_host" name = "usable_host" onchange="next6()"/>
             <div id = "feedback_mssg6"></div>
             <div class = "answer-button" id = "answer-button-7"> Hints </div>
             <div id = "answer-7">
-                Number of usable host IP address will be 2<sup>(32 - CIDR)</sup> - 2.<br>
+                Number of usable host IP address will be 2<sup>(32 - CIDR number)</sup> - 2.<br>
                 We subtract two for the network and broadcast IP addresses.<br>
                 For example: <br>
-                If CIDR value : /30 <br>
-                Number of usable host IP = 2<sup>32 - 30</sup> - 2 = 2.
+                If CIDR number is /30 <br>
+                then the number of assignable IP addresses is <br/>
+                = 2<sup>(32 - 30)</sup> - 2 = 2.
 
             </div>
         </div>
