--- a/classA/classA.html
+++ b/classA/classA.html
@@ -11,7 +11,7 @@
     <p class = "learn"> To learn more about the IP classes
         <a href = "https://www.meridianoutpost.com/resources/articles/IP-classes.php" target = "_blank" style = "font-size: 20px;"> Click here!</a>
     </p>
-    <img src = "../class.png" alt = "classes"/>
+    <img src = "../class.png" alt = "classes" class = "image-3"/>
 
     <div>
     <button onclick="showIP()" class = "Generate_IP"> Generate an IP address for a computer (i.e., host device)</button>
